# text-to-sql

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/text_to_sql/: __init__.py  bird_loader.py  cli.py  loader.py  spider_ko_loader.py  spider_loader.py
tests/: test_bird_loader.py  test_spider_ko_loader.py  test_spider_loader.py
text_to_sql.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
